# swagger.yaml
@@ -14,6 +14,8 @@ basePath: "/api"
 paths:
   /reports/formats:
     get:
+      tags:
+        - filter models
       summary: Получить список форматов для отчетов
       operationId: main.formats
       produces:
@@ -31,6 +33,8 @@ paths:
 
   /reports/range/{format}:
     get:
+      tags:
+        - filter models
       summary: Получить список единиц измерения
       operationId: main.reports_range
       produces:
@@ -53,6 +57,8 @@ paths:
 
   /reports/group/{format}:
     get:
+      tags:
+        - filter models
       summary: Получить список групп номенклатур
       operationId: main.reports_group
       produces:
@@ -75,6 +81,8 @@ paths:
 
   /reports/nomenclature/{format}:
     get:
+      tags:
+        - filter models
       summary: Получить список номенклатур
       operationId: main.reports_nomenclature
       produces:
@@ -97,6 +105,8 @@ paths:
 
   /reports/recipe/{format}:
     get:
+      tags:
+        - filter models
       summary: Получить список рецептов
       operationId: main.reports_recipe
       produces:
@@ -119,6 +129,8 @@ paths:
 
   /filter/{domain}:
       post:
+        tags:
+        - filter models
         summary: Фильтрация данных по модели
         operationId: main.filter_data
         consumes:
@@ -163,3 +175,77 @@ paths:
             description: Ошибка на сервере
           default:
             description: Неизвестная ошибка
+
+
+  /reports/transactions/{format}:
+    get:
+      tags:
+        - filter warehouse
+      summary: Получить список рецептов
+      operationId: main.reports_transaction
+      produces:
+        - application/text
+      responses:
+        200:
+          description: OK
+          schema:
+            type: object
+        500:
+          description: Ошибка на сервере
+        default:
+          description: Неизвестная ошибка
+    parameters:
+    - name: format
+      in: path
+      description: Уникальный код формата
+      required: true
+      type: string
+        
+
+# пока не работает
+  # /transaction/filter/{domain}:
+  #     post:
+  #       summary: Фильтрация данных по модели
+  #       operationId: main.filter_transaction
+  #       consumes:
+  #         - application/json
+  #       produces:
+  #         - application/json
+  #       parameters:
+  #         - name: domain
+  #           in: path
+  #           required: true
+  #           type: string
+  #           description: Доступные модели для фильтрации nomenclature, warehouse
+  #         - in: body
+  #           name: filter
+  #           description: Доступные фильтры EQUALS, LIKE
+  #           required: true
+  #           schema:
+  #             type: object
+  #             properties:
+  #               name:
+  #                 type: string
+  #                 default: ""
+  #               filter_name:
+  #                 type: string
+  #                 default: "EQUALS"
+  #               unique_code:
+  #                 type: string
+  #                 default: ""
+  #               filter_unique_code:
+  #                 type: string
+  #                 default: "EQUALS"
+  #       responses:
+  #         200:
+  #           description: OK
+  #           schema:
+  #             type: object
+  #         400:
+  #           description: Ошибка ввода данных
+  #           schema:
+  #             type: object
+  #         500:
+  #           description: Ошибка на сервере
+  #         default:
+  #           description: Неизвестная ошибка
